deployment.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: carbon_footprint-jvd
  labels:
    app: carbon_footprint-jvd
spec:
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - carbon_footprint-jvd
      from:
        kind: ImageStreamTag
        name: carbon_footprint-jvd:latest
    type: ImageChange
  replicas: 1
  selector:
    app: carbon_footprint-jvd
  template:
    metadata:
      labels:
        app: carbon_footprint-jvd
    spec:
      securityContext:
        runAsUser: 1001
      containers:
        - name: carbon_footprint-jvd
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: carbon_footprint-jvd
  labels:
    app: carbon_footprint-jvd
spec:
  to:
    kind: Service
    name: carbon_footprint-jvd
  port:
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: carbon_footprint-jvd
  labels:
    app: carbon_footprint-jvd
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: carbon_footprint-jvd
  type: ClusterIP
